@@ -335,55 +335,52 @@ public final class JavaManager {
     // search java
 
     private static Map<Path, JavaRuntime> searchPotentialJavaExecutables() {
-        Map<Path, JavaRuntime> javaRuntimes = new HashMap<>();
-        searchAllJavaInRepository(javaRuntimes, Platform.SYSTEM_PLATFORM);
+        Searcher searcher = new Searcher();
+        searcher.searchAllJavaInRepository(Platform.SYSTEM_PLATFORM);
         switch (OperatingSystem.CURRENT_OS) {
             case WINDOWS:
                 if (Architecture.SYSTEM_ARCH == Architecture.X86_64)
-                    searchAllJavaInRepository(javaRuntimes, Platform.WINDOWS_X86);
+                    searcher.searchAllJavaInRepository(Platform.WINDOWS_X86);
                 if (Architecture.SYSTEM_ARCH == Architecture.ARM64) {
                     if (OperatingSystem.SYSTEM_BUILD_NUMBER >= 21277)
-                        searchAllJavaInRepository(javaRuntimes, Platform.WINDOWS_X86_64);
-                    searchAllJavaInRepository(javaRuntimes, Platform.WINDOWS_X86);
+                        searcher.searchAllJavaInRepository(Platform.WINDOWS_X86_64);
+                    searcher.searchAllJavaInRepository(Platform.WINDOWS_X86);
                 }
                 break;
             case MACOS:
                 if (Architecture.SYSTEM_ARCH == Architecture.ARM64)
-                    searchAllJavaInRepository(javaRuntimes, Platform.MACOS_X86_64);
+                    searcher.searchAllJavaInRepository(Platform.MACOS_X86_64);
                 break;
         }
 
         switch (OperatingSystem.CURRENT_OS) {
             case WINDOWS:
-                queryJavaInRegistryKey(javaRuntimes, WinReg.HKEY.HKEY_LOCAL_MACHINE, "SOFTWARE\\JavaSoft\\Java Runtime Environment");
-                queryJavaInRegistryKey(javaRuntimes, WinReg.HKEY.HKEY_LOCAL_MACHINE, "SOFTWARE\\JavaSoft\\Java Development Kit");
-                queryJavaInRegistryKey(javaRuntimes, WinReg.HKEY.HKEY_LOCAL_MACHINE, "SOFTWARE\\JavaSoft\\JRE");
-                queryJavaInRegistryKey(javaRuntimes, WinReg.HKEY.HKEY_LOCAL_MACHINE, "SOFTWARE\\JavaSoft\\JDK");
+                searcher.queryJavaInRegistryKey(WinReg.HKEY.HKEY_LOCAL_MACHINE, "SOFTWARE\\JavaSoft\\Java Runtime Environment");
+                searcher.queryJavaInRegistryKey(WinReg.HKEY.HKEY_LOCAL_MACHINE, "SOFTWARE\\JavaSoft\\Java Development Kit");
+                searcher.queryJavaInRegistryKey(WinReg.HKEY.HKEY_LOCAL_MACHINE, "SOFTWARE\\JavaSoft\\JRE");
+                searcher.queryJavaInRegistryKey(WinReg.HKEY.HKEY_LOCAL_MACHINE, "SOFTWARE\\JavaSoft\\JDK");
 
-                searchJavaInProgramFiles(javaRuntimes, "ProgramFiles", "C:\\Program Files");
-                searchJavaInProgramFiles(javaRuntimes, "ProgramFiles(x86)", "C:\\Program Files (x86)");
-                if (Architecture.SYSTEM_ARCH == Architecture.ARM64) {
-                    searchJavaInProgramFiles(javaRuntimes, "ProgramFiles(ARM)", "C:\\Program Files (ARM)");
-                }
+                searcher.searchJavaInProgramFiles("ProgramFiles", "C:\\Program Files");
+                searcher.searchJavaInProgramFiles("ProgramFiles(x86)", "C:\\Program Files (x86)");
                 break;
             case LINUX:
-                searchAllJavaInDirectory(javaRuntimes, Paths.get("/usr/java"));      // Oracle RPMs
-                searchAllJavaInDirectory(javaRuntimes, Paths.get("/usr/lib/jvm"));   // General locations
-                searchAllJavaInDirectory(javaRuntimes, Paths.get("/usr/lib32/jvm")); // General locations
-                searchAllJavaInDirectory(javaRuntimes, Paths.get("/usr/lib64/jvm")); // General locations
-                searchAllJavaInDirectory(javaRuntimes, Paths.get(System.getProperty("user.home"), "/.sdkman/candidates/java")); // SDKMAN!
+                searcher.searchAllJavaInDirectory(Path.of("/usr/java"));      // Oracle RPMs
+                searcher.searchAllJavaInDirectory(Path.of("/usr/lib/jvm"));   // General locations
+                searcher.searchAllJavaInDirectory(Path.of("/usr/lib32/jvm")); // General locations
+                searcher.searchAllJavaInDirectory(Path.of("/usr/lib64/jvm")); // General locations
+                searcher.searchAllJavaInDirectory(Path.of(System.getProperty("user.home"), "/.sdkman/candidates/java")); // SDKMAN!
                 break;
             case MACOS:
-                searchJavaInMacJavaVirtualMachines(javaRuntimes, Paths.get("/Library/Java/JavaVirtualMachines"));
-                searchJavaInMacJavaVirtualMachines(javaRuntimes, Paths.get(System.getProperty("user.home"), "/Library/Java/JavaVirtualMachines"));
-                tryAddJavaExecutable(javaRuntimes, Paths.get("/Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home/bin/java"));
-                tryAddJavaExecutable(javaRuntimes, Paths.get("/Applications/Xcode.app/Contents/Applications/Application Loader.app/Contents/MacOS/itms/java/bin/java"));
+                searcher.searchJavaInMacJavaVirtualMachines(Path.of("/Library/Java/JavaVirtualMachines"));
+                searcher.searchJavaInMacJavaVirtualMachines(Path.of(System.getProperty("user.home"), "/Library/Java/JavaVirtualMachines"));
+                searcher.tryAddJavaExecutable(Path.of("/Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home/bin/java"));
+                searcher.tryAddJavaExecutable(Path.of("/Applications/Xcode.app/Contents/Applications/Application Loader.app/Contents/MacOS/itms/java/bin/java"));
                 // Homebrew
-                tryAddJavaExecutable(javaRuntimes, Paths.get("/opt/homebrew/opt/java/bin/java"));
-                searchAllJavaInDirectory(javaRuntimes, Paths.get("/opt/homebrew/Cellar/openjdk"));
-                try (DirectoryStream<Path> dirs = Files.newDirectoryStream(Paths.get("/opt/homebrew/Cellar"), "openjdk@*")) {
+                searcher.tryAddJavaExecutable(Path.of("/opt/homebrew/opt/java/bin/java"));
+                searcher.searchAllJavaInDirectory(Path.of("/opt/homebrew/Cellar/openjdk"));
+                try (DirectoryStream<Path> dirs = Files.newDirectoryStream(Path.of("/opt/homebrew/Cellar"), "openjdk@*")) {
                     for (Path dir : dirs) {
-                        searchAllJavaInDirectory(javaRuntimes, dir);
+                        searcher.searchAllJavaInDirectory(dir);
                     }
                 } catch (IOException e) {
                     LOG.warning("Failed to get subdirectories of /opt/homebrew/Cellar");
@@ -397,16 +394,16 @@ public final class JavaManager {
         // Search Minecraft bundled runtimes
         if (OperatingSystem.CURRENT_OS == OperatingSystem.WINDOWS && Architecture.SYSTEM_ARCH.isX86()) {
             FileUtils.tryGetPath(System.getenv("localappdata"), "Packages\\Microsoft.4297127D64EC6_8wekyb3d8bbwe\\LocalCache\\Local\\runtime")
-                    .ifPresent(it -> searchAllOfficialJava(javaRuntimes, it, false));
+                    .ifPresent(it -> searcher.searchAllOfficialJava(it, false));
 
             FileUtils.tryGetPath(Lang.requireNonNullElse(System.getenv("ProgramFiles(x86)"), "C:\\Program Files (x86)"), "Minecraft Launcher\\runtime")
-                    .ifPresent(it -> searchAllOfficialJava(javaRuntimes, it, false));
+                    .ifPresent(it -> searcher.searchAllOfficialJava(it, false));
         } else if (OperatingSystem.CURRENT_OS == OperatingSystem.LINUX && Architecture.SYSTEM_ARCH == Architecture.X86_64) {
-            searchAllOfficialJava(javaRuntimes, Paths.get(System.getProperty("user.home"), ".minecraft/runtime"), false);
+            searcher.searchAllOfficialJava(Path.of(System.getProperty("user.home"), ".minecraft/runtime"), false);
         } else if (OperatingSystem.CURRENT_OS == OperatingSystem.MACOS) {
-            searchAllOfficialJava(javaRuntimes, Paths.get(System.getProperty("user.home"), "Library/Application Support/minecraft/runtime"), false);
+            searcher.searchAllOfficialJava(Path.of(System.getProperty("user.home"), "Library/Application Support/minecraft/runtime"), false);
         }
-        searchAllOfficialJava(javaRuntimes, CacheRepository.getInstance().getCacheDirectory().resolve("java"), true);
+        searcher.searchAllOfficialJava(CacheRepository.getInstance().getCacheDirectory().resolve("java"), true);
 
         // Search in PATH.
         if (System.getenv("PATH") != null) {
@@ -420,7 +417,7 @@ public final class JavaManager {
                 }
 
                 try {
-                    tryAddJavaExecutable(javaRuntimes, Path.of(path, OperatingSystem.CURRENT_OS.getJavaExecutable()));
+                    searcher.tryAddJavaExecutable(Path.of(path, OperatingSystem.CURRENT_OS.getJavaExecutable()));
                 } catch (InvalidPathException ignored) {
                 }
             }
@@ -430,16 +427,17 @@ public final class JavaManager {
             String[] paths = System.getenv("HMCL_JRES").split(File.pathSeparator);
             for (String path : paths) {
                 try {
-                    tryAddJavaHome(javaRuntimes, Paths.get(path));
+                    searcher.tryAddJavaHome(Path.of(path));
                 } catch (InvalidPathException ignored) {
                 }
             }
         }
-        searchAllJavaInDirectory(javaRuntimes, Paths.get(System.getProperty("user.home"), ".jdks"));
+
+        searcher.searchAllJavaInDirectory(Path.of(System.getProperty("user.home"), ".jdks"));
 
         for (String javaPath : ConfigHolder.globalConfig().getUserJava()) {
             try {
-                tryAddJavaExecutable(javaRuntimes, Paths.get(javaPath));
+                searcher.tryAddJavaExecutable(Path.of(javaPath));
             } catch (InvalidPathException e) {
                 LOG.warning("Invalid Java path: " + javaPath);
             }
@@ -447,233 +445,238 @@ public final class JavaManager {
 
         JavaRuntime currentJava = JavaRuntime.CURRENT_JAVA;
         if (currentJava != null
-                && !javaRuntimes.containsKey(currentJava.getBinary())
+                && !searcher.javaRuntimes.containsKey(currentJava.getBinary())
                 && !ConfigHolder.globalConfig().getDisabledJava().contains(currentJava.getBinary().toString())) {
-            javaRuntimes.put(currentJava.getBinary(), currentJava);
+            searcher.javaRuntimes.put(currentJava.getBinary(), currentJava);
         }
 
-        LOG.trace(javaRuntimes.values().stream().sorted()
+        LOG.trace(searcher.javaRuntimes.values().stream().sorted()
                 .map(it -> String.format(" - %s %s (%s, %s): %s",
                         it.isJDK() ? "JDK" : "JRE",
                         it.getVersion(),
                         it.getPlatform().getArchitecture().getDisplayName(),
                         Lang.requireNonNullElse(it.getVendor(), "Unknown"),
                         it.getBinary()))
-                .collect(Collectors.joining("\n", "Finished Java lookup, found " + javaRuntimes.size() + "\n", "")));
+                .collect(Collectors.joining("\n", "Finished Java lookup, found " + searcher.javaRuntimes.size() + "\n", "")));
 
-        return javaRuntimes;
+        return searcher.javaRuntimes;
     }
+    
+    private static final class Searcher {
+        final Map<Path, JavaRuntime> javaRuntimes = new HashMap<>();
 
-    private static void tryAddJavaHome(Map<Path, JavaRuntime> javaRuntimes, Path javaHome) {
-        Path executable = getExecutable(javaHome);
-        if (!Files.isRegularFile(executable)) {
-            return;
-        }
-
-        try {
-            executable = executable.toRealPath();
-        } catch (IOException e) {
-            LOG.warning("Failed to resolve path " + executable, e);
-            return;
-        }
-
-        if (javaRuntimes.containsKey(executable) || ConfigHolder.globalConfig().getDisabledJava().contains(executable.toString())) {
-            return;
-        }
-
-        JavaInfo info = null;
-
-        Path releaseFile = javaHome.resolve("release");
-        if (Files.exists(releaseFile)) {
-            try {
-                info = JavaInfo.fromReleaseFile(releaseFile);
-            } catch (IOException e) {
-                LOG.warning("Failed to read release file " + releaseFile, e);
+        void tryAddJavaHome(Path javaHome) {
+            Path executable = getExecutable(javaHome);
+            if (!Files.isRegularFile(executable)) {
+                return;
             }
+
+            try {
+                executable = executable.toRealPath();
+            } catch (IOException e) {
+                LOG.warning("Failed to resolve path " + executable, e);
+                return;
+            }
+
+            if (javaRuntimes.containsKey(executable) || ConfigHolder.globalConfig().getDisabledJava().contains(executable.toString())) {
+                return;
+            }
+
+            JavaInfo info = null;
+
+            Path releaseFile = javaHome.resolve("release");
+            if (Files.exists(releaseFile)) {
+                try {
+                    info = JavaInfo.fromReleaseFile(releaseFile);
+                } catch (IOException e) {
+                    LOG.warning("Failed to read release file " + releaseFile, e);
+                }
+            }
+
+            if (info == null) {
+                try {
+                    info = JavaInfoUtils.fromExecutable(executable, false);
+                } catch (IOException e) {
+                    LOG.warning("Failed to lookup Java executable at " + executable, e);
+                }
+            }
+
+            if (info != null && isCompatible(info.getPlatform()))
+                javaRuntimes.put(executable, JavaRuntime.of(executable, info, false));
         }
 
-        if (info == null) {
+        void tryAddJavaExecutable(Path executable) {
             try {
-                info = JavaInfoUtils.fromExecutable(executable, false);
+                executable = executable.toRealPath();
+            } catch (IOException e) {
+                return;
+            }
+
+            if (javaRuntimes.containsKey(executable) || ConfigHolder.globalConfig().getDisabledJava().contains(executable.toString())) {
+                return;
+            }
+
+            JavaInfo info = null;
+            try {
+                info = JavaInfoUtils.fromExecutable(executable, true);
             } catch (IOException e) {
                 LOG.warning("Failed to lookup Java executable at " + executable, e);
             }
+
+            if (info != null && isCompatible(info.getPlatform())) {
+                javaRuntimes.put(executable, JavaRuntime.of(executable, info, false));
+            }
         }
 
-        if (info != null && isCompatible(info.getPlatform()))
-            javaRuntimes.put(executable, JavaRuntime.of(executable, info, false));
-    }
+        void tryAddJavaInComponentDir(String platform, Path component, boolean verify) {
+            Path sha1File = component.resolve(platform).resolve(component.getFileName() + ".sha1");
+            if (!Files.isRegularFile(sha1File))
+                return;
 
-    private static void tryAddJavaExecutable(Map<Path, JavaRuntime> javaRuntimes, Path executable) {
-        try {
-            executable = executable.toRealPath();
-        } catch (IOException e) {
-            return;
+            Path dir = component.resolve(platform).resolve(component.getFileName());
+
+            if (verify) {
+                try (BufferedReader reader = Files.newBufferedReader(sha1File)) {
+                    String line;
+                    while ((line = reader.readLine()) != null) {
+                        if (line.isEmpty()) continue;
+
+                        int idx = line.indexOf(" /#//");
+                        if (idx <= 0)
+                            throw new IOException("Illegal line: " + line);
+
+                        Path file = dir.resolve(line.substring(0, idx));
+
+                        // Should we check the sha1 of files? This will take a lot of time.
+                        if (Files.notExists(file))
+                            throw new NoSuchFileException(file.toAbsolutePath().toString());
+                    }
+                } catch (IOException e) {
+                    LOG.warning("Failed to verify Java in " + component, e);
+                    return;
+                }
+            }
+
+            if (OperatingSystem.CURRENT_OS == OperatingSystem.MACOS) {
+                Path macPath = dir.resolve("jre.bundle/Contents/Home");
+                if (Files.exists(macPath)) {
+                    tryAddJavaHome(macPath);
+                    return;
+                } else
+                    LOG.warning("The Java is not in 'jre.bundle/Contents/Home'");
+            }
+
+            tryAddJavaHome(dir);
         }
 
-        if (javaRuntimes.containsKey(executable) || ConfigHolder.globalConfig().getDisabledJava().contains(executable.toString())) {
-            return;
+        void searchAllJavaInRepository(Platform platform) {
+            for (JavaRuntime java : REPOSITORY.getAllJava(platform)) {
+                javaRuntimes.put(java.getBinary(), java);
+            }
+
+            for (JavaRuntime java : LOCAL_REPOSITORY.getAllJava(platform)) {
+                javaRuntimes.put(java.getBinary(), java);
+            }
         }
 
-        JavaInfo info = null;
-        try {
-            info = JavaInfoUtils.fromExecutable(executable, true);
-        } catch (IOException e) {
-            LOG.warning("Failed to lookup Java executable at " + executable, e);
+        void searchAllOfficialJava(Path directory, boolean verify) {
+            if (!Files.isDirectory(directory))
+                return;
+            // Examples:
+            // $HOME/Library/Application Support/minecraft/runtime/java-runtime-beta/mac-os/java-runtime-beta/jre.bundle/Contents/Home
+            // $HOME/.minecraft/runtime/java-runtime-beta/linux/java-runtime-beta
+
+            String javaPlatform = getMojangJavaPlatform(Platform.SYSTEM_PLATFORM);
+            if (javaPlatform != null) {
+                searchAllOfficialJava(directory, javaPlatform, verify);
+            }
+
+            if (OperatingSystem.CURRENT_OS == OperatingSystem.WINDOWS) {
+                if (Architecture.SYSTEM_ARCH == Architecture.X86_64) {
+                    searchAllOfficialJava(directory, getMojangJavaPlatform(Platform.WINDOWS_X86), verify);
+                } else if (Architecture.SYSTEM_ARCH == Architecture.ARM64) {
+                    if (OperatingSystem.SYSTEM_BUILD_NUMBER >= 21277) {
+                        searchAllOfficialJava(directory, getMojangJavaPlatform(Platform.WINDOWS_X86_64), verify);
+                    }
+                    searchAllOfficialJava(directory, getMojangJavaPlatform(Platform.WINDOWS_X86), verify);
+                }
+            } else if (OperatingSystem.CURRENT_OS == OperatingSystem.MACOS && Architecture.CURRENT_ARCH == Architecture.ARM64) {
+                searchAllOfficialJava(directory, getMojangJavaPlatform(Platform.MACOS_X86_64), verify);
+            }
         }
 
-        if (info != null && isCompatible(info.getPlatform())) {
-            javaRuntimes.put(executable, JavaRuntime.of(executable, info, false));
-        }
-    }
-
-    private static void tryAddJavaInComponentDir(Map<Path, JavaRuntime> javaRuntimes, String platform, Path component, boolean verify) {
-        Path sha1File = component.resolve(platform).resolve(component.getFileName() + ".sha1");
-        if (!Files.isRegularFile(sha1File))
-            return;
-
-        Path dir = component.resolve(platform).resolve(component.getFileName());
-
-        if (verify) {
-            try (BufferedReader reader = Files.newBufferedReader(sha1File)) {
-                String line;
-                while ((line = reader.readLine()) != null) {
-                    if (line.isEmpty()) continue;
-
-                    int idx = line.indexOf(" /#//");
-                    if (idx <= 0)
-                        throw new IOException("Illegal line: " + line);
-
-                    Path file = dir.resolve(line.substring(0, idx));
-
-                    // Should we check the sha1 of files? This will take a lot of time.
-                    if (Files.notExists(file))
-                        throw new NoSuchFileException(file.toAbsolutePath().toString());
+        void searchAllOfficialJava(Path directory, String platform, boolean verify) {
+            try (DirectoryStream<Path> dir = Files.newDirectoryStream(directory)) {
+                // component can be jre-legacy, java-runtime-alpha, java-runtime-beta, java-runtime-gamma or any other being added in the future.
+                for (Path component : dir) {
+                    tryAddJavaInComponentDir(platform, component, verify);
                 }
             } catch (IOException e) {
-                LOG.warning("Failed to verify Java in " + component, e);
-                return;
+                LOG.warning("Failed to list java-runtime directory " + directory, e);
             }
         }
 
-        if (OperatingSystem.CURRENT_OS == OperatingSystem.MACOS) {
-            Path macPath = dir.resolve("jre.bundle/Contents/Home");
-            if (Files.exists(macPath)) {
-                tryAddJavaHome(javaRuntimes, macPath);
+        void searchAllJavaInDirectory(Path directory) {
+            if (!Files.isDirectory(directory)) {
                 return;
-            } else
-                LOG.warning("The Java is not in 'jre.bundle/Contents/Home'");
-        }
+            }
 
-        tryAddJavaHome(javaRuntimes, dir);
-    }
-
-    private static void searchAllJavaInRepository(Map<Path, JavaRuntime> javaRuntimes, Platform platform) {
-        for (JavaRuntime java : REPOSITORY.getAllJava(platform)) {
-            javaRuntimes.put(java.getBinary(), java);
-        }
-
-        for (JavaRuntime java : LOCAL_REPOSITORY.getAllJava(platform)) {
-            javaRuntimes.put(java.getBinary(), java);
-        }
-    }
-
-    private static void searchAllOfficialJava(Map<Path, JavaRuntime> javaRuntimes, Path directory, boolean verify) {
-        if (!Files.isDirectory(directory))
-            return;
-        // Examples:
-        // $HOME/Library/Application Support/minecraft/runtime/java-runtime-beta/mac-os/java-runtime-beta/jre.bundle/Contents/Home
-        // $HOME/.minecraft/runtime/java-runtime-beta/linux/java-runtime-beta
-
-        String javaPlatform = getMojangJavaPlatform(Platform.SYSTEM_PLATFORM);
-        if (javaPlatform != null) {
-            searchAllOfficialJava(javaRuntimes, directory, javaPlatform, verify);
-        }
-
-        if (OperatingSystem.CURRENT_OS == OperatingSystem.WINDOWS) {
-            if (Architecture.SYSTEM_ARCH == Architecture.X86_64) {
-                searchAllOfficialJava(javaRuntimes, directory, getMojangJavaPlatform(Platform.WINDOWS_X86), verify);
-            } else if (Architecture.SYSTEM_ARCH == Architecture.ARM64) {
-                if (OperatingSystem.SYSTEM_BUILD_NUMBER >= 21277) {
-                    searchAllOfficialJava(javaRuntimes, directory, getMojangJavaPlatform(Platform.WINDOWS_X86_64), verify);
+            try (DirectoryStream<Path> stream = Files.newDirectoryStream(directory)) {
+                for (Path subDir : stream) {
+                    tryAddJavaHome(subDir);
                 }
-                searchAllOfficialJava(javaRuntimes, directory, getMojangJavaPlatform(Platform.WINDOWS_X86), verify);
+            } catch (IOException e) {
+                LOG.warning("Failed to find Java in " + directory, e);
             }
-        } else if (OperatingSystem.CURRENT_OS == OperatingSystem.MACOS && Architecture.CURRENT_ARCH == Architecture.ARM64) {
-            searchAllOfficialJava(javaRuntimes, directory, getMojangJavaPlatform(Platform.MACOS_X86_64), verify);
         }
-    }
 
-    private static void searchAllOfficialJava(Map<Path, JavaRuntime> javaRuntimes, Path directory, String platform, boolean verify) {
-        try (DirectoryStream<Path> dir = Files.newDirectoryStream(directory)) {
-            // component can be jre-legacy, java-runtime-alpha, java-runtime-beta, java-runtime-gamma or any other being added in the future.
-            for (Path component : dir) {
-                tryAddJavaInComponentDir(javaRuntimes, platform, component, verify);
+        void searchJavaInProgramFiles(String env, String defaultValue) {
+            String programFiles = Lang.requireNonNullElse(System.getenv(env), defaultValue);
+            Path path;
+            try {
+                path = Path.of(programFiles);
+            } catch (InvalidPathException ignored) {
+                return;
             }
-        } catch (IOException e) {
-            LOG.warning("Failed to list java-runtime directory " + directory, e);
-        }
-    }
 
-    private static void searchAllJavaInDirectory(Map<Path, JavaRuntime> javaRuntimes, Path directory) {
-        if (!Files.isDirectory(directory)) {
-            return;
-        }
-
-        try (DirectoryStream<Path> stream = Files.newDirectoryStream(directory)) {
-            for (Path subDir : stream) {
-                tryAddJavaHome(javaRuntimes, subDir);
+            for (String vendor : new String[]{"Java", "BellSoft", "AdoptOpenJDK", "Zulu", "Microsoft", "Eclipse Foundation", "Semeru"}) {
+                searchAllJavaInDirectory(path.resolve(vendor));
             }
-        } catch (IOException e) {
-            LOG.warning("Failed to find Java in " + directory, e);
-        }
-    }
-
-    private static void searchJavaInProgramFiles(Map<Path, JavaRuntime> javaRuntimes, String env, String defaultValue) {
-        String programFiles = Lang.requireNonNullElse(System.getenv(env), defaultValue);
-        Path path;
-        try {
-            path = Paths.get(programFiles);
-        } catch (InvalidPathException ignored) {
-            return;
         }
 
-        for (String vendor : new String[]{"Java", "BellSoft", "AdoptOpenJDK", "Zulu", "Microsoft", "Eclipse Foundation", "Semeru"}) {
-            searchAllJavaInDirectory(javaRuntimes, path.resolve(vendor));
-        }
-    }
-
-    private static void searchJavaInMacJavaVirtualMachines(Map<Path, JavaRuntime> javaRuntimes, Path directory) {
-        if (!Files.isDirectory(directory)) {
-            return;
-        }
-
-        try (DirectoryStream<Path> stream = Files.newDirectoryStream(directory)) {
-            for (Path subDir : stream) {
-                tryAddJavaHome(javaRuntimes, subDir.resolve("Contents/Home"));
+        void searchJavaInMacJavaVirtualMachines(Path directory) {
+            if (!Files.isDirectory(directory)) {
+                return;
             }
-        } catch (IOException e) {
-            LOG.warning("Failed to find Java in " + directory, e);
+
+            try (DirectoryStream<Path> stream = Files.newDirectoryStream(directory)) {
+                for (Path subDir : stream) {
+                    tryAddJavaHome(subDir.resolve("Contents/Home"));
+                }
+            } catch (IOException e) {
+                LOG.warning("Failed to find Java in " + directory, e);
+            }
         }
-    }
 
-    // ==== Windows Registry Support ====
-    private static void queryJavaInRegistryKey(Map<Path, JavaRuntime> javaRuntimes, WinReg.HKEY hkey, String location) {
-        WinReg reg = WinReg.INSTANCE;
-        if (reg == null)
-            return;
+        // ==== Windows Registry Support ====
+        void queryJavaInRegistryKey(WinReg.HKEY hkey, String location) {
+            WinReg reg = WinReg.INSTANCE;
+            if (reg == null)
+                return;
 
-        for (String java : reg.querySubKeys(hkey, location)) {
-            if (!reg.querySubKeys(hkey, java).contains(java + "\\MSI"))
-                continue;
-            Object home = reg.queryValue(hkey, java, "JavaHome");
-            if (home instanceof String) {
-                try {
-                    tryAddJavaHome(javaRuntimes, Paths.get((String) home));
-                } catch (InvalidPathException e) {
-                    LOG.warning("Invalid Java path in system registry: " + home);
+            for (String java : reg.querySubKeys(hkey, location)) {
+                if (!reg.querySubKeys(hkey, java).contains(java + "\\MSI"))
+                    continue;
+                Object home = reg.queryValue(hkey, java, "JavaHome");
+                if (home instanceof String) {
+                    try {
+                        tryAddJavaHome(Path.of((String) home));
+                    } catch (InvalidPathException e) {
+                        LOG.warning("Invalid Java path in system registry: " + home);
+                    }
                 }
             }
         }
+
     }
 }
